@@ -1,4 +1,7 @@
 release 0.1.1 (2007-xx-xx)
+- URIs and URI templates with escaped space character throw exception for URI.create,
+  found by Julian Reschke:
+  https://jersey.dev.java.net/servlets/ReadMsg?list=dev&msgNo=1 
 - include version information in manifest of jersey.jar
 
 release 0.1 (2007-06-19)
